# dplyr

./: .Rbuildignore  .Rprofile  .gitattributes  .gitignore  .travis.yml  2026-02-07-webr.txt  404.html  API  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.html  CONTRIBUTING.html  CONTRIBUTING.md  CRAN-SUBMISSION  DESCRIPTION  Doxyfile  ISSUE_TEMPLATE.html  ISSUE_TEMPLATE.md  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.html  README.md  Rockerfile  SUPPORT.html  _pkgdown.yml  appveyor.yml  authors.html  authors.md  codecov.yml  cran-comments.md  docsearch.json  dplyr.Rproj  index.html  index.md  (+7 more)
.claude/: CLAUDE.md  settings.json  settings.local.json
.github/: CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE.md  SUPPORT.md  lock.yml
R/: RcppExports.R  aaa.R  across.R  add-tally.r  all-equal.R  all-equal.r  arrange.R  arrange.r  attribute.R  base.R  bench-compare.r  bind-cols.R  bind-rows.R  bind.r  bundle.R  by.R  cache.r  case-match.R  case-switch.R  case-when.R  case.R  case_when.R  cbind.r  chain.r  cluster.R  coalesce.R  colwise-arrange.R  colwise-distinct.R  colwise-filter.R  colwise-funs.R  colwise-group-by.R  colwise-mutate.R  colwise-select.R  colwise.R  compat-R.R  compat-dbplyr.R  compat-future-group-by.R  compat-future-group_by.R  compat-lazyeval.R  compat-lifecycle.R  (+301 more)
archive/: README.md  add-version.sh  patch.sh  run-all.sh  run-in.sh
articles/: base.html  base.md  colwise.html  colwise.md  compatibility.html  dplyr.html  dplyr.md  grouping.html  grouping.md  in-packages.html  in-packages.md  index.html  index.md  programming.html  programming.md  recoding-replacing.html  recoding-replacing.md  rowwise.html  rowwise.md  two-table.html  two-table.md  window-functions.html  window-functions.md
bench/: access.r  bench-arrange.R  bench-distinct.R  bench-filter.R  bench-group-by.R  bench-join-mutate.R  bench-summarise.R  df2env.r  equality.r  prepared-query.r  summarise-by.r  var-from-env.r
data/: band.rda  band_instruments.rda  nasa.rda  (+7 more)
data-raw/: band_instruments.R  band_instruments2.R  band_members.R  starwars.R  starwars.csv  storms.R  storms.csv
(+2133 files in other folders)
